--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -217,7 +217,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Map" id="Tbj-qN-oVB">
-                        <barButtonItem key="leftBarButtonItem" image="Worldwide Location-26.png" id="70X-sy-VpF">
+                        <barButtonItem key="leftBarButtonItem" image="Worldwide Location-26" id="70X-sy-VpF">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="findCurrentLocation:" destination="8rJ-Kc-sve" id="Qb0-Em-ebM"/>
@@ -303,7 +303,7 @@
     <resources>
         <image name="Map Marker-26" width="26" height="26"/>
         <image name="Thermometer-26" width="26" height="26"/>
-        <image name="Worldwide Location-26.png" width="26" height="26"/>
+        <image name="Worldwide Location-26" width="26" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="6gC-wb-f96"/>
